# magnum-imgui

./: CMakeLists.txt  FindMagnumImGui.cmake
modules/: FindImGui.cmake  FindMagnumImGui.cmake  ImGuiConfig.cmake  MagnumImGuiConfig.cmake
src/: CMakeLists.txt  Example.cpp  Example.h  MagnumImGui.cpp  MagnumImGui.h
